<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:id="@+id/appbar1">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"></android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.wdullaer.materialdatetimepicker.MainActivity">


                <!-- TimePicker options -->
                <TextView
                    android:id="@+id/time_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_time" />

                <CheckBox
                    android:id="@+id/mode_24_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_24_hours"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/mode_dark_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_dark_time"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/mode_custom_accent_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_custom_accent"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/vibrate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/vibrate_time"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/dismiss_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/dismiss_time"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/title_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/title_time"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/enable_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/enable_seconds"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/enable_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/enable_minutes"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/limit_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/limit_times"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <!-- DatePicker Options -->
                <TextView
                    android:id="@+id/date_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/mode_dark_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_dark_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/mode_custom_accent_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_custom_accent"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/vibrate_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/vibrate_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/dismiss_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/dismiss_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/show_year_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/show_year_first"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/title_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/limit_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/limit_dates"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/disable_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/disable_dates"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />

                <CheckBox
                    android:id="@+id/highlight_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/highlight_dates"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="TextViewEdits" />


            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_anchorGravity="bottom|right"
        android:src="@drawable/upload"
        android:layout_marginRight="16dp"
        android:clickable="true"
        app:fabSize="normal"
        app:backgroundTint="@android:color/holo_green_dark"
        android:id="@+id/acceptedSetting"
        tools:ignore="RtlHardcoded"
        android:layout_gravity="top|left"
        app:layout_anchor="@+id/appbar"
        app:srcCompat="@drawable/upload" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ignore"
        android:id="@+id/ignoredSetting"
        android:layout_gravity="top|right"
        tools:ignore="RtlHardcoded"
        app:layout_anchorGravity="bottom|left"
        app:layout_anchor="@+id/appbar" />
</android.support.design.widget.CoordinatorLayout>
